<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.marekmaj</groupId>
    <artifactId>hfplatform</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>hfplatform</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.lmax</groupId>
            <artifactId>disruptor</artifactId>
            <version>3.0.1</version>
        </dependency>
        <dependency>
            <groupId>com.typesafe.akka</groupId>
            <artifactId>akka-agent_2.10</artifactId>
            <version>2.2.3</version>
        </dependency>
        <dependency>
            <groupId>net.openhft</groupId>
            <artifactId>chronicle</artifactId>
            <version>2.0.2</version>
        </dependency>
        <dependency>
            <groupId>net.openhft</groupId>
            <artifactId>affinity</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>net.jcip</groupId>
            <artifactId>jcip-annotations</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.hdrhistogram</groupId>
            <artifactId>HdrHistogram</artifactId>
            <version>1.0.9</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.caliper</groupId>
            <artifactId>caliper</artifactId>
            <version>0.5-rc1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.2.1</version>
                <configuration>
                    <executable>java</executable>
                    <arguments>
                        <argument>-Xms15g</argument>
                        <argument>-Xmx15g</argument>
                        <argument>-server</argument>
                        <argument>-XX:+DoEscapeAnalysis</argument>
                        <argument>-XX:+UseCompressedOops</argument>
                        <argument>-Dstm.threads=${stm.threads}</argument>
                        <argument>-Dop.factor=${op.factor}</argument>
                        <argument>-Dtime.gen=${time.gen}</argument>
                        <argument>-Dtime.mean=${time.mean}</argument>
                        <argument>-Dtime.std=${time.std}</argument>
                        <argument>-Daffinity=${affinity}</argument>
                        <argument>-Dinput.buffer.size=${input.buffer.size}</argument>
                        <argument>-Daccounts.size=${accounts.size}</argument>
                        <argument>-classpath</argument>
                        <classpath/>
                        <argument>${main.class}</argument>
  <!--                      <argument>-XX:+PrintGCTimeStamps</argument>
                        <argument>-XX:+PrintGCDetails</argument>
                        <argument>-Xloggc:gc.log</argument>-->
                        <!--<argument>-classpath</argument>
                        <classpath/>-->
                    </arguments>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
